# aiogram-order-bot

./: .env.example  .gitignore  docker-compose.example  pyproject.toml
alembic/: env.py
alembic/versions/: 0355093e8fe6_initial_migration.py  38a3f757a8a6_initial_migration.py  ba64a75ccd1f_updated_cart_model.py  e075da9cf9a9_delete_order_associations.py  fd6897b08bf2_initial_migration.py
app/bot/: bot.py  first_admin_creation.py
app/bot/dialogs/flows/: __init__.py
app/bot/dialogs/utils/: message_with_all_carts_and_items.py  roles_utils.py
app/bot/dialogs/widgets/: MultiSelectCounter.py
app/bot/enums/: group_data.py
app/bot/filters/: chat_type_filters.py
app/bot/handlers/: __init__.py  callback.py  commands.py  errors.py  groups.py
app/bot/keyboards/: inline_keyboards.py  menu_button.py
app/bot/middlewares/: database.py  get_group.py  get_user.py  i18n.py  shadow_ban.py
app/bot/utils/: group_utils.py  notifications_for_admins.py
app/infrastructure/cache/: __init__.py
app/infrastructure/database/: db.py
app/infrastructure/database/enums/: __init__.py  cart_statuses.py  order_statuses.py  payment_methods.py  user_roles.py
app/infrastructure/database/models/: __Init__.py  base_model.py  cart.py  category.py  delivery_order.py  dish.py  group.py  restaurant.py  user.py
app/infrastructure/database/query/: cart_queries.py  category_queries.py  dish_queries.py  group_queries.py  order_queries.py  (+2 more)
app/services/scheduler/: taskiq_broker.py
config/: config.py  settings.toml
locales/en/LC_MESSAGES/: txt.ftl
locales/ru/LC_MESSAGES/: txt.ftl
(+27 files in other folders)
