[project]
name = "aiogram-bot-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "aiogram-dialog>=2.4.0",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "dynaconf>=3.2.12",
    "fluentogram>=1.2.1",
    "sqlalchemy>=2.0.46",
    "taskiq>=0.12.1",
    "taskiq-nats>=0.6.0",
    "taskiq-redis>=1.2.1",
]
